Fix site message gap

--- a/frontend/static/frontend/scss/_utilities.scss
+++ b/frontend/static/frontend/scss/_utilities.scss
@@ -762,6 +762,11 @@ tr {
     }
   }
 }
+@media (max-width: 601px) {
+  .site-message{
+    top: 56px;
+  }
+}
 
 .list-slider {
 
